--- a/templates/login.html
+++ b/templates/login.html
@@ -757,7 +757,7 @@
                 <!-- <div class="gmail">
                     <button>Login using Institue Email id</button>
                 </div> -->
-                <div class="email"><input type="email" placeholder="Email ID" id="email" name="email"><i class="fa-solid fa-envelope"></i></div>
+                <div class="email"><input type="text" placeholder="User Name" id="user-name" name="username"><i class="fa-solid fa-envelope"></i></div>
                 <div class="password"><input type="password" id="pass" placeholder="Password" name="password" autocomplete="new-password"><span onclick="toggleShow()"><i class="fa-solid fa-lock"></i></span></div>
                 <div class="forget">
                     <p><input type="checkbox"> Remember me</p>
