--- a/templates/login.html
+++ b/templates/login.html
@@ -666,8 +666,11 @@
         </div>
           
           <div class="nav1-login">
-            <!-- <a href="/login">Sign up</a> -->
-            <a href="/login">Login</a>
+              {% if user.is_authenticated %}
+              <a href='{% url "logout" %}'>Logout</a>
+              {% else %}
+              <a href='{% url "login" %}'>Login</a>
+              {% endif %}
           </div>
       </div>
   
@@ -689,7 +692,13 @@
               <li><a href="/" class="active">Home</a></li>
               <li><a href="/stays">Stays</a></li>
               <li><a href="/bookings">Your Bookings</a></li>
-              <li><a href="/login">Login</a></li>
+              <li><div class="nav1-login">
+                {% if user.is_authenticated %}
+                <a href='{% url "logout" %}'>Logout</a>
+                {% else %}
+                <a href='{% url "login" %}'>Login</a>
+                {% endif %}
+              </div></li>
           </ul>
       </div>
 
