--- a/templates/login.html
+++ b/templates/login.html
@@ -711,7 +711,7 @@
                     <input type="radio" name="radio-buttons" id="img-1" checked />
                     <li class="slide-container">
                       <div class="slide-image">
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/9/9e/Timisoara_-_Regional_Business_Centre.jpg">
+                        <img src="{% static 'back.jpg' %}">
                       </div>
                       <div class="carousel-controls">
                         <label for="img-3" class="prev-slide">
@@ -725,7 +725,7 @@
                     <input type="radio" name="radio-buttons" id="img-2" />
                     <li class="slide-container">
                       <div class="slide-image">
-                        <img src="https://content.r9cdn.net/rimg/dimg/db/02/06b291e8-city-14912-171317ad83a.jpg?width=1750&height=1000&xhint=3040&yhint=2553&crop=true">
+                        <img src="{% static 'h1.jpg' %}">
                       </div>
                       <div class="carousel-controls">
                         <label for="img-1" class="prev-slide">
@@ -739,7 +739,7 @@
                     <input type="radio" name="radio-buttons" id="img-3" />
                     <li class="slide-container">
                       <div class="slide-image">
-                        <img src="https://speakzeasy.files.wordpress.com/2015/05/twa_blogpic_timisoara-4415.jpg">
+                        <img src="{% static 'hostel.jpg' %}">
                       </div>
                       <div class="carousel-controls">
                         <label for="img-2" class="prev-slide">
